# kokkos-fft

./: .clang-format  .clang-tidy  .cmake-format.py  .gitignore  .gitlab-ci.yml  .gitmodules  .linkcheckerrc  .pre-commit-config.yaml  .readthedocs.yaml  .typos.toml  AUTHORS  CHANGELOG.md  CITATION.cff  CMakeLists.txt  COPYRIGHT.md  CTestConfig.cmake  LICENSE  README.md
common/src/: CMakeLists.txt  KokkosFFT_Asserts.hpp  KokkosFFT_CheckConditions.hpp  KokkosFFT_Common_Types.hpp  KokkosFFT_Container_Helpers.hpp  KokkosFFT_Convert_Types.hpp  KokkosFFT_Cuda_types.hpp  KokkosFFT_Extents.hpp  KokkosFFT_HIP_types.hpp  KokkosFFT_Helpers.hpp  KokkosFFT_Layout.hpp  KokkosFFT_MDOperations.hpp  KokkosFFT_Mapping.hpp  KokkosFFT_Normalization.hpp  KokkosFFT_OpenMP_types.hpp  KokkosFFT_Padding.hpp  KokkosFFT_SYCL_types.hpp  KokkosFFT_Traits.hpp  KokkosFFT_Transpose.hpp  KokkosFFT_UnaryOps.hpp  KokkosFFT_asserts.hpp  KokkosFFT_common_types.hpp  KokkosFFT_default_types.hpp  KokkosFFT_layouts.hpp  KokkosFFT_normalization.hpp  KokkosFFT_padding.hpp  KokkosFFT_traits.hpp  KokkosFFT_transpose.hpp  KokkosFFT_utils.hpp
common/unit_test/: CMakeLists.txt  Test_Assert.cpp  Test_CheckConditions.cpp  Test_Common_Utils.cpp  Test_Container_Helpers.cpp  Test_Convert_Types.cpp  Test_Extents.cpp  Test_Helpers.cpp  Test_Layout.cpp  Test_Layouts.cpp  Test_MDOperations.cpp  Test_Main.cpp  Test_Mapping.cpp  Test_Normalization.cpp  Test_Padding.cpp  Test_Traits.cpp  Test_Transpose.cpp  Test_Types.hpp  Test_Utils.cpp  Test_Utils.hpp  Test_prep_transpose_view.cpp
distributed/src/: CMakeLists.txt  KokkosFFT_Distributed_All2All.hpp  KokkosFFT_Distributed_ContainerAnalyses.hpp  KokkosFFT_Distributed_Extents.hpp  KokkosFFT_Distributed_MPI_All2All.hpp  KokkosFFT_Distributed_MPI_Comm.hpp  KokkosFFT_Distributed_MPI_Extents.hpp  KokkosFFT_Distributed_MPI_Types.hpp  KokkosFFT_Distributed_Mapping.hpp  KokkosFFT_Distributed_PackUnpack.hpp  KokkosFFT_Distributed_Topologies.hpp  KokkosFFT_Distributed_TransBlock.hpp  KokkosFFT_Distributed_Types.hpp
distributed/unit_test/: CMakeLists.txt  Test_All2All.cpp  Test_ContainerAnalyses.cpp  Test_Extents.cpp  Test_MPI_Extents.cpp  Test_MPI_Types.cpp  Test_Main.cpp  Test_Mapping.cpp  Test_Pack.cpp  Test_Topologies.cpp  Test_TplComm.cpp  Test_TransBlock.cpp  Test_Types.cpp  Test_Unpack.cpp  Test_Utils.hpp
docs/: CMakeLists.txt  Doxyfile.in  Makefile  api_reference.rst  citation.rst  conf.py  developer_guide.rst  examples.rst  finding_libraries.rst  getting_started.rst  index.rst  requirements.txt
docs/api/: plan.rst
docs/developer/: CI.rst  contributing.rst  documentation.rst  review.rst
docs/imgs/: hw_anime.gif.license
docs/intro/: api_reference_link.rst  building.rst  finding_libraries_link.rst  quick_start.rst  using.rst
docs/samples/: 01_1DFFT.rst  02_2DFFT.rst  03_NDFFT.rst  04_batchedFFT.rst  05_1DFFT_HOST_DEVICE.rst  06_1DFFT_reuse_plans.rst  07_unmanaged_views.rst  08_inplace_FFT.rst  09_derivative.rst  10_HasegawaWakatani.rst
examples/: CMakeLists.txt
examples/01_1DFFT/: 01_1DFFT.cpp  CMakeLists.txt  numpy_fft_1d.py
examples/02_2DFFT/: 02_2DFFT.cpp  CMakeLists.txt  numpy_2DFFT.py  numpy_fft_2d.py
examples/03_NDFFT/: 03_NDFFT.cpp  CMakeLists.txt  numpy_NDFFT.py  numpy_fft_nd.py
examples/04_batchedFFT/: 04_batchedFFT.cpp  CMakeLists.txt  numpy_batchedFFT.py  numpy_batched_fft.py
examples/05_1DFFT_HOST_DEVICE/: 05_1DFFT_HOST_DEVICE.cpp  CMakeLists.txt  numpy_1DFFT.py  numpy_fft_1d.py
examples/06_1DFFT_reuse_plans/: 06_1DFFT_reuse_plans.cpp  CMakeLists.txt  numpy_1DFFT.py
examples/07_unmanaged_views/: 07_unmanaged_views.cpp  CMakeLists.txt
examples/08_awful_usage/: 08_awful_usage.cpp  CMakeLists.txt
examples/08_inplace_FFT/: 08_inplace_FFT.cpp  CMakeLists.txt
examples/09_HasegawaWakatani/: 09_hasegawa_wakatani.cpp  CMakeLists.txt  hasegawa_wakatani.py
examples/09_derivative/: 09_derivative.cpp  CMakeLists.txt  derivative.py  test_derivative.py
examples/10_HasegawaWakatani/: 10_hasegawa_wakatani.cpp  CMakeLists.txt  README.md  hasegawa_wakatani.py  io_utils.hpp  postscript.py
examples/advanced/: CMakeLists.txt
examples/docs/: CMakeLists.txt  docs_fft.cpp  docs_fft2.cpp  docs_fftn.cpp  docs_ifft.cpp  docs_ifft2.cpp  docs_ifftn.cpp
fft/: CMakeLists.txt
fft/perf_test/: BenchmarkMain.cpp  Benchmark_Context.hpp  CMakeLists.txt  KokkosFFT_PrintConfiguration.hpp  KokkosFFT_TplsVersion.hpp  PerfTest_FFT1.cpp  PerfTest_FFT1.hpp  PerfTest_FFT2.cpp  PerfTest_FFT2.hpp
fft/src/: CMakeLists.txt  KokkosFFT.hpp  KokkosFFT_Core.cpp  KokkosFFT_Core.hpp  KokkosFFT_Cuda_asserts.hpp  KokkosFFT_Cuda_plans.hpp  KokkosFFT_Cuda_transform.hpp  KokkosFFT_Cuda_types.hpp  KokkosFFT_DynPlans.hpp  KokkosFFT_FFTW_Types.hpp  KokkosFFT_HIP_asserts.hpp  KokkosFFT_HIP_plans.hpp  KokkosFFT_HIP_transform.hpp  KokkosFFT_HIP_types.hpp  KokkosFFT_Helpers.hpp  KokkosFFT_Host_plans.hpp  KokkosFFT_Host_transform.hpp  KokkosFFT_Host_types.hpp  KokkosFFT_OpenMP_plans.hpp  KokkosFFT_OpenMP_transform.hpp  KokkosFFT_OpenMP_types.hpp  KokkosFFT_Plans.hpp  KokkosFFT_ROCM_asserts.hpp  KokkosFFT_ROCM_plans.hpp  KokkosFFT_ROCM_transform.hpp  KokkosFFT_ROCM_types.hpp  KokkosFFT_SYCL_plans.hpp  KokkosFFT_SYCL_transform.hpp  KokkosFFT_SYCL_types.hpp  KokkosFFT_Transform.hpp  KokkosFFT_default_types.hpp
fft/unit_test/: CMakeLists.txt  Test_DynPlans.cpp  Test_Helpers.cpp  Test_InitializeFinalize.cpp  Test_Main.cpp  Test_MainNoInit.cpp  Test_Plans.cpp  Test_Transform.cpp  Test_Types.hpp  Test_Utils.hpp
install_test/: CMakeLists.txt  main.cpp
install_test/as_library/: CMakeLists.txt  as_library.sh  hello.cpp
install_test/as_subdirectory/: CMakeLists.txt  as_subdirectory.sh  hello.cpp
install_test/src/: CMakeLists.txt
python/: .gersemirc  .pylintrc  check_versions.py  pyproject.toml
testing/src/: CMakeLists.txt  KokkosFFT_Allclose.hpp  KokkosFFT_AlmostEqual.hpp  KokkosFFT_AlmostEqualNulp.hpp  KokkosFFT_Concepts.hpp  KokkosFFT_CountErrors.hpp  KokkosFFT_PrintErrors.hpp  KokkosFFT_Testing.hpp  KokkosFFT_TypeCartesianProduct.hpp  KokkosFFT_Ulps.hpp
testing/unit_test/: CMakeLists.txt  (+11 more)
(+118 files in other folders)
