# SPDX-FileCopyrightText: (C) The kokkos-fft development team, see COPYRIGHT.md file
#
# SPDX-License-Identifier: MIT OR Apache-2.0 WITH LLVM-exception

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kokkos-fft"
version = "0.2.1"
readme = "../README.md"
requires-python = ">=3.8"
dependencies = [
  "gersemi>=0.17"
]
license = { text = "MIT OR Apache-2.0 licence with LLVM exception" }

[project.urls]
Homepage = "https://github.com/kokkos/kokkos-fft"
Issues = "https://github.com/kokkos/kokkos-fft/issues"

[tool.hatch.build.targets.wheel]
packages = ["python"]
